--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngrx",
+  "name": "ngrx-users-test",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,25 +11,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
-    "@angular/cdk": "^14.2.5",
+    "@angular/cdk": "~14.2.6",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
-    "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "^14.2.0",
-    "@angular/material": "^14.2.5",
+    "@angular/material": "~14.2.6",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@angular/service-worker": "^14.2.0",
+    "@ngrx/effects": "^14.3.2",
     "@ngrx/store": "^14.3.2",
-    "moment": "^2.29.4",
+    "@ngrx/store-devtools": "^14.3.2",
+    "@ngx-pwa/local-storage": "^13.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.6",
-    "@angular/cli": "~14.2.6",
+    "@angular-devkit/build-angular": "^14.2.7",
+    "@angular/cli": "~14.2.7",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
